.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

Runtime Behavior Changes:

  * util-app: Add visibility for NonFatal exceptions during exiting of `c.t.app.App`. 
    Added visibility into any NonFatal exceptions which occur during the closing of 
    resources during `App#close`. ``PHAB_ID=D146029``

  * util-core: Ensure the `Awaitable.CloseAwaitably0.closeAwaitably` Future returns. 
    Because the `closed` AtomicBoolean is flipped, we want to make sure that executing 
    the passed in `f` function satisfies the `onClose` Promise even the cases of thrown
    exceptions. ``PHAB_ID=D146565``

  * util-stats: Alphabetically sort stats printed to the given `PrintStream` in the
    `c.t.finagle.stats.InMemoryStatsReceiver#print(PrintStream)` function.

    To include stats headers which provide better visual separation for the different
    types of stats being printedm, set `includeHeaders` to true. E.g.,
    ```
    InMemoryStatsReceiver#print(PrintStream, includeHeaders = true)
    ```
    ``PHAB_ID=D144091``

18.3.0  2018-03-05

Runtime Behavior Changes:

  * util-app: Ensure that any flag parsing error reason is written to `System.err`
    before attempting to print flag usage. In the event that collecting flags for
    the printing the usage message fails, users will still receive a useful message
    as to why flag parsing failed. ``PHAB_ID=D137629``

  * util-core: Promises/Futures now use LIFO execution order for their callbacks
    (was depth-based algorithm before).  ``PHAB_ID=D135407``

  * util-core: Wrap the function passed to `Closable.make` in a try/catch and return
    a `Future.exception` over any NonFatal exception. ``PHAB_ID=D142086``

Deprecations:
